[tool.poetry]
name = "big-sqs"
version = "1.1.0"
description = "An SQS client capable of storing oversize message payloads on S3."
authors = ["Saul Johnson <saul.johnson@breachlock.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/security-breachlock/big-sqs.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "big_sqs" },
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "1.22.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
